Interactive search in the “Folder Subscriptions” does nothing
When I click on “Manage Subscriptions” (for an Email account) the window “Folder Subscription” opens
-
Pressing Ctrl+F immediately after the window is open, shall move the focus to the “Show items that contain” field. Instead it open is the bottom another box, where text can be entered, but does nothing.
-
Pressing Ctrl+F anytime later shall move the focus to the “Show items that contain” field. Sometimes this key combination does nothing, sometimes opens a search field on the bottom, depending on what was selected when the keybourd was pressed
Edited by Milan Crha