I#376 - Interactive search in the “Folder Subscriptions” does nothing

Closes https://gitlab.gnome.org/GNOME/evolution/issues/376